--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,11 @@
     <title>Geoguess Master</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@4.9.95/css/materialdesignicons.min.css">
+    <style>
+      html{
+        overflow-y: auto !important;
+      }
+      </style>
   </head>
   <body>
     <script src="https://maps.googleapis.com/maps/api/js?key=<%= VUE_APP_API_KEY %>"></script>
