--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="<%= BASE_URL %>img/icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <title>Geoguess 2</title>   
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Montserrat:wght@500;700">
+    <title>Geoguess</title>   
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@4.9.95/css/materialdesignicons.min.css">
     <style>
       html{
