--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,9 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="<%= BASE_URL %>img/icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <title>Geoguess</title>   
+    <title>Geoguess</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@4.9.95/css/materialdesignicons.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Homenaje&display=swap" rel="stylesheet">
     <style>
       html{
         overflow-y: auto !important;
@@ -38,7 +39,7 @@
         width:90% ;
         background-color: #2196f3;
         border-color: #2196f3;
-        font-family: 'Roboto', sans-serif;
+        font-family: 'Homenaje', sans-serif;
       }
       </style>
   </head>
