--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <meta name="theme-color" content="#ffffff">
     <title>Geoguess</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@4.9.95/css/materialdesignicons.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Homenaje&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Homenaje&display=swap" rel="stylesheet">
     <style>
       html{
         overflow-y: auto !important;
@@ -39,7 +39,7 @@
         width:90% ;
         background-color: #2196f3;
         border-color: #2196f3;
-        font-family: 'Homenaje', sans-serif;
+        font-family: 'Roboto', sans-serif;
       }
       </style>
   </head>
