fix: gmap memory leaks

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="<%= BASE_URL %>img/icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <title>Geoguess</title>
+    <title>GeoGuess</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@4.9.95/css/materialdesignicons.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Homenaje&display=swap" rel="stylesheet">
     <style>
@@ -44,7 +44,6 @@
       </style>
   </head>
   <body>
-    <script src="https://maps.googleapis.com/maps/api/js?key=<%= VUE_APP_API_KEY %>"></script>
     <noscript>
       <strong>We're sorry but geoguess-master doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
