chore(manifest): color

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
-    <meta name="theme-color" content="#1A237E">
+    <meta name="theme-color" content="#ded3af">
     <link rel="apple-touch-icon" sizes="57x57" href="<%= BASE_URL %>img/icons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="<%= BASE_URL %>img/icons/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="<%= BASE_URL %>img/icons/apple-icon-72x72.png">
@@ -21,7 +21,6 @@
     <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="<%= BASE_URL %>img/icons/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
     <title>GeoGuess</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@4.9.95/css/materialdesignicons.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Homenaje&display=swap" rel="stylesheet">
