chore(manifest): orpti

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
-    <meta name="theme-color" content="#ded3af">
+    <meta name="theme-color" content="#f1e9d6">
     <link rel="apple-touch-icon" sizes="57x57" href="<%= BASE_URL %>img/icons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="<%= BASE_URL %>img/icons/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="<%= BASE_URL %>img/icons/apple-icon-72x72.png">
@@ -18,12 +18,12 @@
     <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>img/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="<%= BASE_URL %>img/icons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>img/icons/favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="<%= BASE_URL %>manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="<%= BASE_URL %>img/icons/ms-icon-144x144.png">
     <title>GeoGuess</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@4.9.95/css/materialdesignicons.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Homenaje&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <style>
       html{
         overflow-y: auto !important;
