feat: mobile refacto css

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="#f1e9d6">
     <link rel="apple-touch-icon" sizes="57x57" href="<%= BASE_URL %>img/icons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="<%= BASE_URL %>img/icons/apple-icon-60x60.png">
