--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but geoguess-master doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but GeoGuess doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <div role="alert" id="alert-update" class="v-alert v-sheet theme--dark elevation-3 v-alert--prominent info d-none">
